metatensor-core/include/metatensor.h

typedef int32_t mts_status_t;
typedef struct mts_block_t mts_block_t;
typedef struct mts_labels_t mts_labels_t;
typedef struct mts_tensormap_t mts_tensormap_t;
typedef struct mts_array_t {
  void *ptr;
  void (*destroy)(void *array);
  mts_status_t (*origin)(const void *array, mts_data_origin_t *origin);
  mts_status_t (*device)(const void *array, DLDevice *device);
  mts_status_t (*dtype)(const void *array, DLDataType *dtype);
  mts_status_t (*as_dlpack)(void *array,
                            DLManagedTensorVersioned **dl_managed_tensor,
                            DLDevice device,
                            const int64_t *stream,
                            DLPackVersion max_version);
  mts_status_t (*from_dlpack)(const void *array,
                              DLManagedTensorVersioned *dl_managed_tensor,
                              struct mts_array_t *new_array);
  mts_status_t (*shape)(const void *array, const uintptr_t **shape, uintptr_t *shape_count);
  mts_status_t (*reshape)(void *array, const uintptr_t *shape, uintptr_t shape_count);
  mts_status_t (*swap_axes)(void *array, uintptr_t axis_1, uintptr_t axis_2);
  mts_status_t (*create)(const void *array,
                         const uintptr_t *shape,
                         uintptr_t shape_count,
                         struct mts_array_t fill_value,
                         struct mts_array_t *new_array);
  mts_status_t (*copy)(const void *array, DLDevice device, struct mts_array_t *new_array);
  mts_status_t (*move_data)(void *output,
                            const void *input,
                            const struct mts_data_movement_t *movements,
                            uintptr_t movements_count);
} mts_array_t;
typedef uint8_t *(*mts_realloc_buffer_t)(void *user_data, uint8_t *ptr, uintptr_t new_size);
typedef mts_status_t (*mts_create_array_callback_t)(const uintptr_t *shape,
                                                    uintptr_t shape_count,
                                                    DLDataType dtype,
                                                    struct mts_array_t *array);
mts_status_t mts_labels_save_buffer(uint8_t **buffer,
                                    uintptr_t *buffer_count,
                                    void *realloc_user_data,
                                    mts_realloc_buffer_t realloc,
                                    const struct mts_labels_t *labels);
struct mts_block_t *mts_block_load(const char *path, mts_create_array_callback_t create_array);
struct mts_block_t *mts_block_load_buffer(const uint8_t *buffer,
                                          uintptr_t buffer_count,
                                          mts_create_array_callback_t create_array);
mts_status_t mts_block_save(const char *path, const struct mts_block_t *block);
mts_status_t mts_block_save_buffer(uint8_t **buffer,
                                   uintptr_t *buffer_count,
                                   void *realloc_user_data,
                                   mts_realloc_buffer_t realloc,
                                   const struct mts_block_t *block);
struct mts_tensormap_t *mts_tensormap_load(const char *path,
                                           mts_create_array_callback_t create_array);
struct mts_tensormap_t *mts_tensormap_load_buffer(const uint8_t *buffer,
                                                  uintptr_t buffer_count,
                                                  mts_create_array_callback_t create_array);
mts_status_t mts_tensormap_save(const char *path, const struct mts_tensormap_t *tensor);
mts_status_t mts_tensormap_save_buffer(uint8_t **buffer,
                                       uintptr_t *buffer_count,
                                       void *realloc_user_data,
                                       mts_realloc_buffer_t realloc,
                                       const struct mts_tensormap_t *tensor);